Template_Assignment.Rmd

--- a/Template_Assignment.Rmd
+++ b/Template_Assignment.Rmd
@@ -753,55 +753,43 @@ knitr::include_graphics("USD_per_cov_event.png")
 knitr::include_graphics("CD_per_spending_event.png")
 ```
 
-Applying the findings related to the correlation between government healthcare spending per capita and national vaccination coverage rates worldwide, we can analyse a critical event period from 2020 to 2022 which relates to the COVID-19 pandemic. Unlike gradual policy reforms during the 2010-2014 period such as GAVI's (source <https://www.gavi.org/our-alliance/strategy/phase-3-2011-2015>) innovative financing mechanisms which introduced market-based incentives to lower vaccine pricing and availability structure, the pandemic created an acute simultaneous shock to every healthcare system worldwide. This situation enables a unique opportunity to examine how external crises affect government healthcare spending per capita and national vaccination coverage rates worldwide.
+Applying the findings related to the correlation between government healthcare spending per capita and national vaccination coverage rates worldwide, we can analyse a critical event period from 2020 to 2022 which relates to the COVID-19 pandemic. Unlike earlier gradual reforms such as GAVI's 2011-2015 financing activities (source <https://www.gavi.org/our-alliance/strategy/phase-3-2011-2015>),  the pandemic created an acute simultaneous shock to every healthcare system worldwide. This situation enables a unique opportunity to examine how external crises affect  healthcare spending and vaccination coverage rates worldwide.
 
-During COVID-19 routine immunizations were suspended or decreased as worldwide healthcare systems had to respond to the pandemic, meaning that regardless of funding levels directed to vaccinations, their coverage still dropped. (source <https://www.who.int/news/item/22-05-2020-at-least-80-million-children-under-one-at-risk-of-diseases-such-as-diphtheria-measles-and-polio-as-covid-19-disrupts-routine-vaccination-efforts-warn-gavi-who-and-unicef>).
+During COVID-19 routine immunizations were suspended or decreased as healthcare systems focused on pandemic response, meaning coverage declined regardless of funding. (source <https://www.who.int/news/item/22-05-2020-at-least-80-million-children-under-one-at-risk-of-diseases-such-as-diphtheria-measles-and-polio-as-covid-19-disrupts-routine-vaccination-efforts-warn-gavi-who-and-unicef>).
 
 Due to global lockdowns and border restrictions another major disruption was on the supply chain, as the struggle to transport vaccinations across borders and maintain cold storage systems increased, leading to decreased vaccination availability. Increasingly relevant to this study, a decrease in 7.7% DTP3 vaccine coverage worldwide was recognized compared to expected doses delivered in the absence of COVID. (source <https://www.thelancet.com/article/S0140-6736%2821%2901337-4/fulltext>)
 
-The child deaths per spending data reveals a steady improvement trajectory up until before COVID-19 where regions started to show signs of stagnation. African regions kept stable child deaths per spending through the pandemic which suggests this region had resilience strategies such as community health worker programs which focused on under-five care while more formal systems were focused on COVID related health issues. Regardless of staffing shortages and movement restriction, these pre-established networks prevented many children' deaths in this region. (source <https://pubmed.ncbi.nlm.nih.gov/38963883/>) This data might however have overstated results as it may reflect COVID-19 related deaths and healthcare access disruptions which caused an increased number of infant mortality, complicating the interpretation of spending efficiency across this time period.
+The child deaths per spending data reveals a steady improvement pre COVID-19, bu stagnation set during the pandemic in some regions. African regions kept stable child deaths per spending through the pandemic, suggesting resilience strategies such as community health worker programs which focused on under-five care while more formal health systems were focused on COVID related health issues. These systems, despite staffing shortages and movement restriction, prevented many children' deaths. (source <https://pubmed.ncbi.nlm.nih.gov/38963883/>) However, the data might overstate these results as increased child mortality due to COVID-related health issues complicate the interpretation of spending efficiency.
 
-The global coverage map strucks with regional disparities during the 2020-2022 period, ranging from 60% to close to 100% in some WHO regions. This suggests that pre-existing health care systems' resilience and adaptive mechanisms worldwide varied greatly upon facing the pandemic. Whereas most childhood vaccines declined in coverage worldwide, it was more prominent in low and lower-middle income countries (source <https://pmc.ncbi.nlm.nih.gov/articles/PMC10249397/>?) , which reinstates that more developed countries with better precautionary health systems can keep a more stable vaccination coverage even during more strenuous moments on the healthcare system.
+The global coverage map reveals sharp regional disparities during 2020-2022, ranging from 60% to close to 100%. Underscoring, the disparity of pre-existing health care systems' resilience and adaptive mechanisms. Childhood vaccines declines were more prominent in low and lower-middle income countries (source <https://pmc.ncbi.nlm.nih.gov/articles/PMC10249397/>?), reaffirming that more developed countries with better resourced health systems managed to sustain coverage more effectively under strain.
 
-Similarly the comparison between sub populations shows how bottom performing regions, namely Africa, maintained a 82% coverage during the pandemic while top performing regions achieved 91%. This data aligns with the previous graph, showing that stronger health systems in Europe can much better mitigate coverage maintenance challenges compared to African regions.
+Subpopulation comparisons show African regions maintained a 82% coverage during the pandemic while top performing regions achieved 91%. This supports the argument that stronger systems, such as the ones in Europe, were better equipped  to mitigate coverage maintenance challenges.
 
-Finally, the dollar per coverage point data shows a sudden spike in costs, which suggests that it became much more expensive to maintain coverage during the pandemic. The aforementioned supply chain disruption provides an explanation to this spike. Service suspensions and supply-chain delays caused vaccination volumes to drop, meaning that the delivery costs such as personnel and cold chains had to be spread over fewer doses, significantly increasing the per-point cost.
+Finally, the dollar per coverage point data shows a sudden spike in costs, which suggests that it became much more expensive to maintain coverage during the pandemic. Disrupted supply chains and service suspensions meant fewer doses were delivered while, while fixed costs such as cold chains remained. This then signficantly increased the per-point cost. 
 
 ### 3.7.1 Interpretation and Relevance
 
-Over the course of the analysis of the relation between all four graphs and COVID-19, strong temporal evidence has come to light, hinting a pandemic-related causation rather than coincidental trends. This challenges theories which assume stable and linear relationships between government healthcare spending and vaccination coverages. Three key insights emerge from the analysis:
-
-Crisis-state exception: Traditional vaccination coverage models operate under the assumption of stability and predictability, meaning that major disruptions such as COVID-19 can crumble healthcare systems if these are not equipped with dynamic frameworks addressing both normal and crisis-states.
-
-System resilience hierarchy: An unrecognized hiearchy of system resilience between regions emerged with this study, slicing through traditional income classifications. Community-based delivery systems such as the ones in Rwanda and Bangladesh (source <https://pubmed.ncbi.nlm.nih.gov/38963883/>) demonstrated certain poorer areas have superior crisis adaptability compared to other highly bureacratic systems in richer countries. This insights allows for the discussion diving into the potential vulnerability that comes with highly institutionalized systems.
-
-Resource Mobilization Capacity: The cost spike related to supply chain disruptions highlights the importance of rapidly scaling spending in response to crises. Similar to Keynes' view, this insight challenges static spending-outcome models by introducing varied increase in resources as a better option.
-
-One key takeaway from the study is how resilient delivery systems are key to react to sudden disruptors. The superior performance of community-based systems might lead to conversations on how even more developed countries should emphasize on decentralized, locally-controlled delivery mechanisms to maintain healthcare standards during major events.
-
-Furthemore over-sophisticated health systems and its shortcomings could direct policy makers to evaluate the efficiency advantages or disadvantages of complex and integrated systems. Finally, the varied regional responses to the pandemic era disclose poor international coordination, with each region managing responses independently. Advocating once more for more flexible, decentralized international response frameworks.
+The data reveals a relationship between healthcare spending and improved vaccination coverage, which broke down during COVID-19. The sharp decline of cost-efficiency, highlighted the vulnerability of highyl bureaucratic, centralized systems. Meanwhile, low-income regions maintained results through crisis proof, community-based delivery models. Though causality is inferred rather than proven, the timing supports a strong link. These findings stress that adaptability, not just funding, is crucial for sustaining vaccination efforts during systemic shocks.
 
 # Part 4 - Discussion
 
-Over the course of the analysis of the relation between all four graphs and COVID-19, strong temporal evidence has come to light, hinting a pandemic-related causation rather than coincidental trends. This challenges theories which assume stable and linear relationships between government healthcare spending and vaccination coverages. Three key insights emerge from the analysis:
+Over the course of the analysis linking vaccination coverage trends to COVID-19, strong temporal evidence has emerged, suggesting a causal relationship rather than a coincidental one. This challenges theories of stable, linear relationships between government healthcare spending and vaccination coverages. Three key insights are identified:
 
-Crisis-state exception: Traditional vaccination coverage models operate under the assumption of stability and predictability, meaning that major disruptions such as COVID-19 can crumble healthcare systems if these are not equipped with dynamic frameworks addressing both normal and crisis-states.
+Crisis-state exception: Traditional vaccination coverage models operate assume stability and predictability, yet COVID-19 expose that without dynamic frameworks addressing both normal and crisis-states, systems can collapse under acute pressure.
 
-System resilience hierarchy: An unrecognized hierarchy of system resilience between regions emerged with this study, slicing through traditional income classifications. Community-based delivery systems such as the ones in Rwanda and Bangladesh (source <https://pubmed.ncbi.nlm.nih.gov/38963883/>) demonstrated certain poorer areas have superior crisis adaptability compared to other highly bureaucratic systems in richer countries. This insights allows for the discussion diving into the potential vulnerability that comes with highly institutionalized systems.
+System resilience hierarchy: A new hierarchy of system resilience emerged, slicing through traditional income classifications. Community-based delivery systems such as the ones in Rwanda and Bangladesh (source <https://pubmed.ncbi.nlm.nih.gov/38963883/>) outperformend more institutionalized systems in wealthier nations. This reveals the vulnerability that comes with highly institutionalized systems during crisis.
 
-Resource Mobilization Capacity: The cost spike related to supply chain disruptions highlights the importance of rapidly scaling spending in response to crises. Similar to Keynes' view, this insight challenges static spending-outcome models by introducing varied increase in resources as a better option.
+Resource Mobilization Capacity: The cost spike due to supply chain disruptions underscores the need for rapid, flexible spending responses. Echoing Keynes' view, static spending-outcome models are insufficient in volatile contexts.
 
-One key takeaway from the study is how resilient delivery systems are key to react to sudden disruptors. The superior performance of community-based systems might lead to conversations on how even more developed countries should emphasize on decentralized, locally-controlled delivery mechanisms to maintain healthcare standards during major events.
+A core takeaway is that resilient delivery systems are key to react to sudden disruptions. The superior performance of community-based systems suggests that advanced economies should explore more decentralized, locally-controlled mechanisms to maintain healthcare standards during major events.
 
-Furthermore over-sophisticated health systems and its shortcomings could direct policy makers to evaluate the efficiency advantages or disadvantages of complex and integrated systems. Finally, the varied regional responses to the pandemic era disclose poor international coordination, with each region managing responses independently. Advocating once more for more flexible, decentralized international response frameworks.
+Moreover, the shortcomings of highly complex systems could direct policy makers to evaluate the efficiency of complex and integrated systems during crises. The varied regional responses to the pandemic era disclose poor international coordination, with each region managing responses independently. Advocating once more for more flexible, decentralized international response frameworks.
 
 ## 4.1 Discuss our findings
 
-Our most significant finding was that sophisticated, well-funded healthcare systems suffered the greatest efficiency losses during the pandemic, whereas simpler, less-funded systems proved resilience. Europe maintained \>90% coverage but had dramatic cost increases from \$25 to \$31 per coverage point during COVID. On the other hand, African regions maintained stable child deaths per spending ratios despite having the lowest spending levels.
+Our most significant finding is that complex, well-funded healthcare systems experienced the greatest efficiency losses during the pandemic, whereas simpler, less-funded systems proved resilience. Europe maintained >90% coverage but had dramatic cost increases from \$25 to \$31 per coverage point during COVID. On the other hand, African regions maintained stable child deaths per spending ratios despite having the lowest spending levels.
 
-Traditional income classifications were deemed flawed to predict pandemic resilience. In turn, system design characteristics such as degree of centralization and institutional complexity became the main differentiator between regions' adaptability to extremely impactful events. Community-based systems' adaptive capacity prevailed over highly institutionalized systems' tendency to create multiple failure points, requiring major resource mobilization.
-
-Pre-pandemic data showed a predictable improvement amongst all regions, but when the pandemic struck, dramatic changes were observed that altered spending-outcome relationships.
+Traditional income classifications were deemed flawed to predict pandemic resilience. In turn, system design characteristics such as degree of centralization and institutional complexity became the main differentiator between regions' adaptability to disruptions. Community-based systems' adaptive capacity prevailed over highly institutionalized systems' tendency to create multiple failure points, requiring major resource mobilization.
 
 The findings of this study challenge core health economics assumptions and suggests the need for dynamic models, capable to adapt to stable and unstable environments. For policy implementation, the superior performance of community-based systems drags the topic of pandemic preparedness to a more decentralized approach.
 
